# openapi.yaml
@@ -74,7 +74,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Carrier'
+                $ref: '#/components/schemas/CarrierDetails'
         "400":
           description: Ошибка запроса
         "404":
@@ -109,7 +109,19 @@ paths:
           description: Кол-во данных
           required: false
           schema:
-            type: number
+            type: integer
+        - name: offset
+          in: query
+          description: Кол-во данных
+          required: false
+          schema:
+            type: integer
+        - name: has_transfers
+          in: query
+          description: Показывать варианты с пересадками
+          required: false
+          schema:
+            type: string
       responses:
         "200":
           description: Успешный ответ с рейсами
@@ -470,11 +482,16 @@ components:
         to:
           $ref: '#/components/schemas/Station'
         has_transfers:
-          type: boolean
+          type: string
         tickets_info:
           $ref: '#/components/schemas/TicketsInfo'
         duration:
-          type: integer
+          type: number
+          format: double
+        departure:
+          type: string
+        arrival:
+          type: string
         arrival_terminal:
           type: string
         start_date:
@@ -566,55 +583,56 @@ components:
           type: string
         latitude:
           type: number
-    
-    
-    
+          
+    CarrierDetails:
+      type: object
+      properties:
+        carrier:
+          $ref: '#/components/schemas/Carrier'
+            
     
     Carrier:
       type: object
       properties:
-        carrier:
+        code:
+          type: integer
+          example: 680
+        contacts:
+          type: string
+          example: "Телефон: +7 (1234) 123456"
+        url:
+          type: string
+          example: "http://www.example.com/"
+        title:
+          type: string
+          example: "Россия"
+        phone:
+          type: string
+          example: ""
+        codes:
           type: object
           properties:
-            code:
-                type: integer
-                example: 680
-            contacts:
-                type: string
-                example: "Телефон: +7 (1234) 123456"
-            url:
-                type: string
-                example: "http://www.example.com/"
-            title:
-                type: string
-                example: "Россия"
-            phone:
-                type: string
-                example: ""
-            codes:
-              type: object
-              properties:
-                icao:
-                  type: string
-                  nullable: true
-                  example: null
-                sirena:
-                  type: string
-                  nullable: true
-                  example: null
-                iata:
-                  type: string
-                  nullable: true
-                  example: null
-            adress:
-                type: string
-                example: "Санкт-Петербург, ул. Строителей, д. 18"
-            logo:
-                type: string
-                example: "//yastatic.net/rasp/media/data/company/logo/logo_1.jpg"
-            email:
-                type: string
-                example: ""
+            icao:
+              type: string
+              nullable: true
+              example: null
+            sirena:
+              type: string
+              nullable: true
+              example: null
+            iata:
+              type: string
+              nullable: true
+              example: null
+        address:
+          type: string
+          example: "Санкт-Петербург, ул. Строителей, д. 18"
+        logo:
+          type: string
+          example: "//yastatic.net/rasp/media/data/company/logo/logo_1.jpg"
+        email:
+          type: string
+          example: ""
     Country:
       type: object
       properties:
